# raft_ats

./: .gitignore  README.md  package.json  pnpm-lock.yaml
apps/ai-modules/: README.md
apps/backend/: package-lock.json  package.json  pyproject.toml  server.js
apps/backend/app/: main.py
apps/backend/app/api/routes/: auth.py
apps/backend/app/core/: config.py  security.py
apps/backend/app/models/: user_model.py
apps/backend/app/schemas/: auth_schema.py
apps/backend/app/services/: auth_service.py
apps/backend/prisma/: schema.prisma
apps/frontend/: package.json  tailwind.config.ts  tsconfig.tsbuildinfo
apps/frontend/src/app/: globals.css  layout.tsx
apps/frontend/src/app/(auth)/: layout.tsx
apps/frontend/src/components/ai-insights/: ai-filters.tsx  ai-insight-card.tsx  ai-kpi-cards.tsx  ai-score-card.tsx  candidate-match-panel.tsx  hiring-intelligence.tsx  pipeline-risk-analysis.tsx  recruiter-ai-insights.tsx  smart-recommendations.tsx
apps/frontend/src/components/analytics/: analytics-filters.tsx  analytics-kpi-cards.tsx  cv-submission-trend.tsx  hiring-funnel-chart.tsx  offer-analytics.tsx  pipeline-bottlenecks.tsx  recruiter-leaderboard.tsx  recruiter-performance-chart.tsx  source-breakdown.tsx  time-to-hire.tsx
apps/frontend/src/components/candidates/: add-candidate-modal.tsx  ai-score-badge.tsx  candidate-columns.tsx  candidate-details-drawer.tsx  candidate-filters.tsx  candidate-kpi-cards.tsx  candidate-row-actions.tsx  candidate-search.tsx  candidate-table.tsx  (+1 more)
apps/frontend/src/types/: candidate.ts  interview.ts  job.ts  pipeline.ts
(+67 files in other folders)
